Add project schema
